# runwasi

./: Cargo.toml  Makefile
crates/containerd-shim-wasmtimeserve/: Cargo.toml
crates/containerd-shim-wasmtimeserve/src/: instance.rs  main.rs
